F11-04: implement business metrics API
